Bug 143445 - Endnotes not at the end and not formatted as expected when saving many footnotes as DOC and opening (at the end in MSO, so RT problem)
Summary: Endnotes not at the end and not formatted as expected when saving many footno...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, filter:doc, regression
Depends on:
Blocks: Footnote-Endnote
  Show dependency treegraph
 
Reported: 2021-07-19 22:21 UTC by Frank Remski
Modified: 2023-05-23 06:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
24 page thesis (240.50 KB, application/msword)
2021-07-23 11:05 UTC, Frank Remski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Remski 2021-07-19 22:21:12 UTC
I have a 24 page document using endnotes and they do not show up as I expected them. I can find no help in the on line help and I cannot see any obvious choices to make what I am seeing look the way I think it should and the way it looks in Microsoft Office.

I am saving the document as an Office 2003 type doc. I am using Libre version 6.4.3.2 and I have seen the same concerns with the current version 7.

Observations:

1. Endnotes show up as footnotes but the position does not seem to relate to the page the note is referencing.

2. Changing the Footnote option to End of Document moves the endnotes but not to the end.

3. At the end of the document before the endnotes are displayed, I am getting several as in three or four blank pages that cannot be deleted. With show/hide ON, the pages are truly blank except for the page header which is showing page numbering.

4. When the end of document list starts to appear, it starts with the endnote number that is next in sequence after all the footnote displays. And then the line indicating the top of the end list is spaced down from the top of the page by a couple of inches. I have not measured it yet.

5. Sometimes when I right click on a stored endnote showing up as a footnote, all the notes shift to the end but observations 3 and 4 persist.

6. When the endnotes show up as footnotes, they do not appear to be on pages that have anything to do with the setting of the endnote flag. For example, endnote 1 reference near the top of page one may appear at the bottom of page one, or at the bottom of page 4 with three other endnotes.
Comment 1 Dmitriy Siushkin 2021-07-23 07:56:45 UTC
please add an attach
Comment 2 Frank Remski 2021-07-23 11:05:11 UTC
Created attachment 173805 [details]
24 page thesis

I have also tried the dodt type and the docx type with no success.
Comment 3 QA Administrators 2021-07-24 03:43:02 UTC Comment hidden (obsolete)
Comment 4 Timur 2021-07-26 12:36:48 UTC Comment hidden (obsolete)
Comment 5 Timur 2021-07-26 12:43:10 UTC
When reporting a bug against DOC or DOCX, (preferably minimal) source ODT must be attached, so that test shows if bug is about filesave or fileopen.
Comment 6 Timur 2021-07-26 13:15:08 UTC
Frank, when saving as DOC or DOCX you may encounter additional bugs because that's saving to non-native format for LO. If opening that DOC again, you may further add some fileopen bug. 
Attached DOC is not a good sample to confirm the bug. Interestingly enough, LO opens it wrong and MSO opens it better, showing endnotes at the end (but with error in the file). 
I made the most simple document with endnotes and LO saved it properly as DOC. So there may be some prerequisites which need to be found before confirming this bug.
Comment 7 NISZ LibreOffice Team 2021-07-27 08:28:26 UTC
@Timur you can better see the problem for yourself with the .doc version of the example in bug 143456:
https://bugs.documentfoundation.org//show_bug.cgi?id=143456#c4

You need to have multiple endnotes placed on different pages.

This is an implementation error from the initial version of the compatibility option:

https://git.libreoffice.org/core/+/4814e8caa5f06c4fe438dfd7d7315e4a2410ea18%5E%21
Comment 8 Stéphane Guillou (stragu) 2023-04-21 09:06:04 UTC
Reproduced in recent master build with attachment 173708 [details]:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 61b41646c5a93ca24f2c9f143cdb0da2c9258989
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

I confirmed comment 7 by checking before and after commit 4814e8caa5f06c4fe438dfd7d7315e4a2410ea18 with linux-64-6.4 bibisect repo.

All endnotes are at the end of the document before the commit.
Since the commit, endnotes are spread throughout the document, looking like footnotes.

I'm marking as regression rather than an implementation error.
Comment 9 Commit Notification 2023-05-23 06:12:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dc11f5b151e1a2ea2623fc8cf806a400763955d9

tdf#143445 DOC import: limit the usage of the CONTINUOUS_ENDNOTES compat flag

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Miklos Vajna 2023-05-23 06:15:25 UTC
The above is a minimal fix to just restore documents with many endnotes. As the last para of the commit msg suggests, I may get back to improve the actual feature at some stage, but I'm too busy with floating tables at this stage.