tdf#143445 DOC import: limit the usage of the CONTINUOUS_ENDNOTES compat flag

The bugdoc has 72 endnotes and not all of them were listed at the end
of the document, since commit 4814e8caa5f06c4fe438dfd7d7315e4a2410ea18
(tdf#124601 sw: add ContinuousEndnotes layout compat option,
2019-09-30).

The problem is that for simple documents the strategy to just place the
endnotes (in the form of footnotes) on the last page works, but this
approach breaks when the document is growing, since nobody moves the
endnotes from the former last page to the new last page. Additionally,
it's not trivial to know what the effective last page is, once you have
enough endnotes that the end of the body text is not on the last page.

Fix the problem by restricting when the DOC import sets this compat
flag. The limit is picked to be 2 endnotes, just because that keeps the
use-cases for continuous endnotes working.

A future solution would be to create a layout-level section at the end
of the document for such endnotes: that would allow them to be inline,
and we know how to keep endnotes inside a section & know how to keep a
section at the end of the document. But that would be a bit of a feature
work, let's keep this regression fix simple.

Change-Id: Ideea1c52f4e31ded3e28e9441aace2bc3857079e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152127
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>